# oz_assignment

Database/Day_1/Challenge/: chapter01_06.ipynb
Database/Day_1/Study/: (1)Chapter.ipynb
Database/Day_2/Challenge/: chapter07_13.ipynb
Database/Day_2/Study/: (day2)study.ipynb
Database/Day_3/Challenge/: 챌린지_CREATE(초급).sql
Database/Day_7/study/: NoSQL.ipynb
Database/Day_8/Study/: MongoDB.ipynb  MongoDB_test.ipynb
Django-B/: db.sqlite3  pyproject.toml
Django-B/boards/: admin.py  models.py
Django-B/boards/migrations/: 0001_initial.py  0002_board_data_board_likes_board_reviews_board_writer.py  0003_rename_data_board_date.py  0004_board_create_at_board_updated_at.py  0005_board_user.py
Django-B/common/: models.py
Django-B/config/: authentication.py  settings.py  urls.py
Django-B/feeds/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Django-B/feeds/migrations/: 0001_initial.py
Django-B/reviews/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
Django-B/reviews/migrations/: 0001_initial.py
Django-B/users/: models.py  serializers.py  urls.py  views.py
Django-B/users/migrations/: 0001_initial.py  0002_user_is_business.py  0003_user_grade.py
Flask/Day_1/Challenge/: app.py
Flask/Day_2/Study/: app.py  app1.py
Flask/Day_3/Study/: app.py  models.py
HTML/Day_1/Challenge/: Profile.html  form.html
HTML/Day_1/Study/: (1)HTML.ipynb  sample.html
HTML/Day_2/Challenge/: Profile.html  chat.css  (+2 more)
Python/Day_1/: Ch04_task(code).ipynb
day_1/: linux_0113(문제).ipynb
day_2/: linux_1426.ipynb
day_3/: oz_back.yaml
(+106 files in other folders)
